--- a/notesapp_deployment/package.json
+++ b/notesapp_deployment/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf dist && cd ../notesapp_frontend_deployment && npm run build && cp -r dist ../notesapp_deployment",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "author": "Faraaz Jan",
   "license": "MIT",
