--- a/notesapp_deployment/package.json
+++ b/notesapp_deployment/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../notesapp_frontend_deployment && npm run build && cp -r dist ../notesapp_deployment",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "author": "Faraaz Jan",
   "license": "MIT",
@@ -19,6 +20,7 @@
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
+    "eslint": "^8.55.0",
     "nodemon": "^3.0.2"
   }
 }
