--- a/notesapp_deployment/package.json
+++ b/notesapp_deployment/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "build:ui": "rm -rf dist && cd ../notesapp_frontend_deployment && npm run build && cp -r dist ../notesapp_deployment",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint . --fix"
   },
   "author": "Faraaz Jan",
   "license": "MIT",
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "eslint": "^8.55.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
